- Added tab in the frame/frameset settings dialog for geometry (fram coordinates + frame margins)
- It's possible to set and modify frame coordinates and margins using the dialog now
- Tables have a default margin of 2 pts.

Reggie, 28.1.1999:
------------------
- Fixes when loading documents
- It's possible to set the linespacing using the toolbar now
- Fixed drawing paragraph borders
- Some other small fixes
- Frame/Frameset dialog can be opened using the menu now too
- Some speed imporvements when ptWidth < rastX because of overlapping frames

Reggie, 29-30.1.1999:
---------------------
- All values in KWord can be given in inch, mm or pt now. For that I had to quite big changes and change
the file format a bit, but old files can still be loaded
- Switching to another unit is currently only possible with a right click on the ruler and choosing
  the unit in the popup menu there
- Fixes with printing (textframes with num > 0 on pages > 0 were not printed)

Reggie, 31.1.1999:
------------------
- Some small cleanups und fixes
- Fixes with loading old kword files
- More fixes with printing
- Many fixes with drawing frame borders, headers/footers, etc.
- Fixes with automatically adding new pages
- Fixes with inserting new frames

Reggie, 1.2.1999:
-----------------
- Started with internal stuff for variables (pagenum, date, etc.)

Reggie, 2.2.1999:
-----------------
- Started with a document structure viewer. This is placed at the left of the canvas (can be hided)
  Currently it's hided by default, since it's still useless :-) Use View->Document Structure to show it
- The document structure viewer will show a hirarchical arrangement of chapters, all pictures, tables,
  embedded objs, etc. in a structured tree view. It will also be possible to rearrange the document
  there and if you click on a item you will get to this part of the text in the canvas.
  Currently you will not see much :-)