@@ -1,0 +1,22 @@
+/* XPM */
+static char*arrange[]={
+"16 16 3 1",
+"a c #a0a0a0",
+"# c #000000",
+". c None",
+"................",
+"..#.............",
+".##.............",
+"..#...#########.",
+"..#.#...........",
+"................",
+".....#...#......",
+"....##..##......",
+".....#...#.####.",
+".....#.#.#......",
+"................",
+".....#..a##.....",
+"....##....#.....",
+".....#...#..###.",
+".....#.#a##.....",
+"................"};
