@@ -1,0 +1,24 @@
+/* XPM */
+static char*clipart[]={
+"16 16 5 1",
+"b c #ffa858",
+"c c #c0c0ff",
+"# c #000000",
+". c None",
+"a c #c0ffc0",
+".....####.......",
+"....#aaaa#......",
+"...#aaaaaa#.....",
+"..#aaaaaaaa#....",
+"..#aaaaaaaa#....",
+"..#aaa#a########",
+"..#aa##aa#bbbbb#",
+"...##cc#aa#bbbb#",
+".##cccc#a#.#bbb#",
+"#ccccccc#...#bb#",
+".#cccccc#....#b#",
+".#ccccccc#....##",
+"..#ccccc##.....#",
+"..#ccc##........",
+"...###..........",
+"...#............"};
