@@ -1,0 +1,29 @@
+/* XPM */
+static char*embedded[]={
+"16 16 10 1",
+"c c #008000",
+"e c #ffa858",
+"a c #00ff00",
+"h c #c0c0ff",
+"f c #00ffff",
+"# c #000000",
+". c None",
+"d c #ffdca8",
+"g c #0000ff",
+"b c #00c000",
+"................",
+".......###......",
+".....##aaa##....",
+"...##aaaaaa##...",
+"...#b##aa##c###.",
+"...#bbb##ccc#dd#",
+"...#bbbbcccc####",
+"...##bbbccc##ee#",
+".##ff##bc##eeee#",
+"#ffffff###eeeee#",
+"###ff##gg#eee##.",
+"#hh##gggg#e##...",
+"#hhhggggg##.....",
+"#hhhggg##.......",
+".##hg##.........",
+"...##..........."};
