@@ -1,0 +1,28 @@
+/* XPM */
+static char*picture[]={
+"16 16 9 1",
+"b c #808080",
+"g c #008000",
+"c c #ffa858",
+"e c #c0c0ff",
+"f c #00ffff",
+"# c #000000",
+". c None",
+"d c #ffff00",
+"a c #0000ff",
+"................",
+"................",
+"..############..",
+"..#aaaaaaaaaa#b.",
+"..#aaaaaacdca#b.",
+"..#aeaeaeddde#b.",
+"..#eeeeeecdce#b.",
+"..#eeeeeeeeee#b.",
+"..#efefefefef#b.",
+"..#ffffffffff#b.",
+"..#gggggggggg#b.",
+"..#gggggggggg#b.",
+"..#gggggggggg#b.",
+"..############b.",
+"...bbbbbbbbbbbb.",
+"................"};
