@@ -1,0 +1,24 @@
+/* XPM */
+static char*table[]={
+"16 16 5 1",
+"b c #808080",
+"a c #00ffff",
+"# c #000000",
+". c None",
+"c c #ffffff",
+"................",
+"................",
+"..############..",
+"..#aa#aaa#aaa#b.",
+"..############b.",
+"..#aa#ccc#ccc#b.",
+"..#aa#ccc#ccc#b.",
+"..############b.",
+"..#aa#ccc#ccc#b.",
+"..#aa#ccc#ccc#b.",
+"..############b.",
+"..#aa#ccc#ccc#b.",
+"..#aa#ccc#ccc#b.",
+"..############b.",
+"...bbbbbbbbbbbb.",
+"................"};
